<resources>
    <string name="app_name">DocBot</string>
    <string name="subtitle_loading_check">Kini kesembuhanmu menjadi lebih dekat.</string>
    <string name="title_loading_check">Analisis Berhasil !</string>
    <string name="hasil">Hasil</string>
    <string name="kembali">Kembali</string>
    <string name="no_tlp">No. Telp :</string>
    <string name="email">Email :</string>
    <string name="address">Alamat :</string>
    <string name="informasi_kesehatan">Informasi Kesehatan</string>
    <string name="age">Umur :</string>
    <string name="weight">Berat Badan :</string>
    <string name="height">Tinggi Badan :</string>
    <string name="health_record">Riwayat Penyakit :</string>
    <string name="allergy">Alergi :</string>
    <string name="btn_account_result">TRANSAKSI SEBELUMNYA</string>
    <string name="et_title_name">Nama</string>
    <string name="et_title_tlp">No. Tlp</string>
    <string name="code_tlp">+62</string>
    <string name="et_title_email">Email</string>
    <string name="et_tittle_address">Alamat</string>
    <string name="et_title_age">Umur</string>
    <string name="et_title_weight">Berat Badan</string>
    <string name="et_title_height">Tinggi Badan</string>
    <string name="et_title_health_record">Riwayat Penyakit</string>
    <string name="et_title_allergy">Alergi</string>

    <string name="welcome_1">Dengan DocBot cek gejala penyakitmu, gejala Covid19 serta kandungan dan manfaat buah sayur menjadi lebih mudah</string>
    <string name="welcome_2">DocBot menerapkan teknologi AI dalam menganalisis kesehatan input form dan gambar</string>
    <string name="welcome_3">DocBot memberikan informasi artikel bermanfaat berdasarkan prediksi gejala yang diinput</string>
    <string name="skip">Skip</string>
    <string name="intro_title_1">Cek Gejala dan Kandungan Bahan Makanan</string>
    <string name="intro_title_2">Teknologi Kesehatan</string>
    <string name="intro_title_3">Informasi Kesehatan</string>
    <string name="login">Login</string>

    <string name="location">Lokasi</string>
    <string name="dummyLocation">Jakarta</string>
    <string name="dashboardAsk">Bagaimana kondisimu hari ini?</string>
    <string name="service">Layanan DocBot</string>
    <string name="check">Cek Gejala Umum</string>
    <string name="check_cv19">Cek Gejala Covid</string>
    <string name="check_buah">Kandungan Buah</string>
    <string name="news">Baca Informasi Kesehatan</string>
    <string name="viewAll">View All</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="infoContact">Info Kontak Puskesmas Terdekat</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="question_gejala">Apa Gejala yang Dirasa?</string>
    <string name="cek">Cek</string>

    <string name="demam">Demam</string>
    <string name="batuk">Batuk</string>
    <string name="hidung">Hidung Berair</string>
    <string name="nyeri">Nyeri Otot</string>
    <string name="lelah">Kelelahan</string>
    <string name="diare">Diare</string>
    <string name="paru">Infeksi Paru</string>
    <string name="jalan">Riwayat Perjalana</string>
    <string name="isolasi">Perawatan Isolasi</string>

    <string name="ambil">Ambil</string>
    <string name="pilih">Pilih</string>
    <string name="dashboard">Dashboard</string>

    <string name="hasil_analisis">Docbot Menganalisis %s Mengandung %s</string>
    <string name="hasil_analisis_2">DocBot menganalisis kamu bisa saja sedang mengalami %s</string>
    <string name="pengananan">Penanganan tercepat untuk kondisi ini adalah %s</string>
    <string name="artikel">Artikel Terkait</string>
    <string name="harus_pergi">Kemana kamu harus pergi?</string>
    <string name="componen_buble_splash">Componen Bubble Splash</string>
    <string name="docbot_logo">DocBot Logo</string>

    <string name="manfaat_buah">Buah ini baik untuk meningkatkan daya tahan tubuh</string>
    <string name="feedback_ask">Bagaimana pengalamanmu bersama DocBot ?</string>
    <string name="membantu">Membantu</string>
    <string name="biasa">Biasa saja</string>
    <string name="kurang">Kurang</string>
    <string name="bangkit_2021">Bangkit 2021</string>


    <string name="dark_mode">Dark Mode</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="setting">Setting</string>
    <string name="more_apps">More Apps</string>
    <string name="follow_us">Follow Us</string>
    <string name="github">GitHub</string>
    <string name="gmail">Email</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="team_id">B21-CAP0362</string>
    <string name="nurimammasri">M2082044 - Nur Imam Masri</string>
    <string name="rafkah">M2242154 - Rafkah Rizqia</string>
    <string name="dian">A0131304 - Dian Arisma Wicakso</string>
    <string name="ari">A0141345 - I Made Ari Widiarsana</string>
    <string name="nurul">C2242155 - Nurul Uswatun Hasanah</string>
    <string name="image_take_view">image take view</string>

    <string name="more_article">More Article</string>

</resources>