<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.about.">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="top"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_about_foto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:foregroundGravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_about_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_about_foto"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/bangkit_2021"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_about_nama"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/team_id"
            android:textColor="@color/app_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_member1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_nim"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/ari"
            android:textColor="@color/app_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_member2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_member1"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/dian"
            android:textColor="@color/app_blue"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_member3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_member2"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/nurimammasri"
            android:textColor="@color/app_blue"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_member4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_member3"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/rafkah"
            android:textColor="@color/app_blue"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/tv_member5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_member4"
            android:fontFamily="@font/metropolis"
            android:gravity="center"
            android:text="@string/nurul"
            android:textColor="@color/app_blue"
            android:textSize="16sp" />
    </RelativeLayout>
</ScrollView>