<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cekgejala.CheckCameraActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:contentDescription="@string/image_take_view"
        android:scaleType="fitCenter"
        android:src="@drawable/cam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_ambil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/roundedbutton"
        android:drawableLeft="@drawable/camera_icon"
        android:fontFamily="@font/nunito"
        android:text="@string/ambil"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_pilih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/roundedbutton"
        android:drawableLeft="@drawable/local_icon"
        android:fontFamily="@font/nunito"
        android:text="@string/pilih"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/btn_ambil"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_cek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito"
        android:backgroundTint="@color/blue_btn02"
        android:text="@string/cek"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ambil" />


</androidx.constraintlayout.widget.ConstraintLayout>