<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="420dp"
    android:layout_height="200dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:elevation="12dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_news"
                android:layout_width="450dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/news"
                tools:src="@drawable/news1"/>

            <TextView
                android:id="@+id/tv_title_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito"
                android:layout_below="@+id/img_news"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                tools:text="@string/title"/>

            <TextView
                android:id="@+id/tv_description_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:lineSpacingExtra="5dp"
                android:ellipsize="end"
                tools:text="@string/lorem"
                android:layout_below="@+id/tv_title_news"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="16dp"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>